# computer-science

compilers/: compilers.code-workspace
compilers/Lab03/: gen_tests.sh  parser.y  scanner.l  test
compilers/Lab07/: Main.java  Makefile  README  gen_code.sh  run_tests.sh
compilers/aquecimento/: comentario.l  hexadecimal.l  makefile
compilers/ex02/: a.out  lex.yy.c
compilers/ex03/: lex.yy.c
compilers/ezlang/: ezlang.l  gen_tests.sh
compilers/golang-tutorial/: go.mod  go.sum  hello.go
computer-graphics/: Makefile.example  computer-graphics.code-workspace
computer-graphics/Lab01/: makefile  out  quadrado.cpp  test
computer-graphics/Lab02/: makefile  out  spline.cpp
computer-graphics/Lab03/: Makefile  cores.cpp  run.app
computer-graphics/Lab04/: alvo.cpp  main.cpp  robo.cpp  tiro.cpp  utils.cpp
computer-graphics/Lab05/opengl3d/: CMakeLists.txt  opengl3d.cpp  run.app
computer-graphics/Lab05/soldado/: CMakeLists.txt  objloader.cpp  objloader.h  run.app  soldado.cpp
computer-graphics/Lab06/Terra-Sol/: CMakeLists.txt  terrasol.cpp
computers-architecture/: 2015-02-MaiorMenorLab2  2015-LabComandosControleComVetor  2015-LabMatriz  2015-P0  2015-P1  2015-P3  2015-P4  2015-P5  FatorialProcedure-MIPS  HelloWorld  MemoryRegister  README.md
computers-architecture/lab1/: mips1.asm
data-structures-1/: README.md
data-structures-1/class-1/: aula1  aula1_1.c  aula1_2.c
data-structures-1/class-2/: aula2.out  matriz.c  matriz.h  progmat.c
data-structures-1/class-3/: lista.c  lista.h  proglista.c  teste.out
data-structures-1/expressions-tree/: CMakeLists.txt  arv_exp.c  arv_exp.h  main.c
data-structures-1/generic-adt/: CMakeLists.txt  listaGenerica.c  lpontos.c  (+3 more)
integrated-project/: java.code-workspace
operational-systems/: clanguage.code-workspace
programming-2/: README.md
(+604 files in other folders)
